Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5.3
-
None
-
d39353085 (dev), a8c1c38f9 (6.6), 44c82209d (tqtc/lts-6.5)
Description
with 6.5.3, i'm getting this error, while with 6.5.2 the code works fine.
Applications/Xcode13.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/concept:318:1: error: Parse error at "::"
this somehow smells like being related to QTBUG-83160 and https://gitlab.kitware.com/cmake/cmake/-/issues/25117
the stl code in question is:
namespace ranges::inline __cpo {
inline constexpr auto swap = __swap::__fn{};
} // namespace ranges::__cpo
maybe the compiler defines `inline`, which causes moc to choke?
xcode 14 and 15 don't suffer from this issue, nevertheless i wonder if there's a way around it
Attachments
Issue Links
- is duplicated by
-
QTBUG-118086 Regression of Qt 6.5.3 over 6.5.2: Build fails on MacOS (Xcode 14.2) with error from AutoMoc in `concept`
-
- Closed
-
- relates to
-
QTBUG-83160 moc stumbles on _GLIBCXX_VISIBILITY
-
- Reported
-
-
QTBUG-118086 Regression of Qt 6.5.3 over 6.5.2: Build fails on MacOS (Xcode 14.2) with error from AutoMoc in `concept`
-
- Closed
-
-
QTBUG-106920 MOC cannot parse nested inline namespace (Parse error at "::")
-
- Closed
-
For Gerrit Dashboard: QTBUG-117765 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
520825,4 | Moc: don't stumple over inline namespace in more places | dev | qt/qtbase | Status: MERGED | +2 | 0 |
520931,2 | Moc: don't stumple over inline namespace in more places | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
521050,2 | Moc: don't stumple over inline namespace in more places | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |