Moc: don't stumple over inline namespace in more places

Ignore the 'inline' in case of nested namespace with another
nested inline namespace.

Amends 5222df2be7d10bf44dfc2971774eadcb526b7a13

Fixes: QTBUG-117765
Pick-to: 6.5
Change-Id: I87f2649606f63c818f225f8cc5ec914920763c5f
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit d39353085e4079ca1eadd787039f7746335225e8)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>